--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -302,7 +302,7 @@
     "        self.layer = self.input @ self.w\n",
     "        var = self.w.T @ self.input.T @ self.input @ self.w\n",
     "        return self.layer,var\n",
-    "    def back_linear(self):\n",
+    "    def back_linear(self,iter):\n",
     "        gradw     = -2*self.input.T @ self.input @ self.w \n",
     "        grad_pass = -2*self.input   @ self.w     @ self.w.T\n",
     "        \n",
@@ -320,7 +320,7 @@
     "        var = self.w.T @ self.input.T @ self.input @ self.w\n",
     "        return self.layerA,var\n",
     "    \n",
-    "    def back_non(self,gradient):\n",
+    "    def back_non(self,gradient,iter):\n",
     "        \n",
     "        grada = (gradient * self.act(self.b * self.layer)).mean(0)\n",
     "        gradb = (gradient * self.a * self.d_act(self.b * self.layer) * self.layer).mean(0)\n",
