Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -350,7 +350,9 @@
     "        \n",
     "        return grad_pass\n",
     "    \n",
+    "#     def stand(self,a): return (a-a.mean())/a.std()\n",
     "    def stand(self,a): return (a-a.mean())/a.std()\n",
+    "\n",
     "\n",
     "    def norm(self,w):  return w/(np.sqrt(np.sum(w**2)))\n",
     "    def sym_decorrelation(self,W):\n",
