Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -269,11 +269,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 285,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T01:43:24.074150Z",
-     "start_time": "2019-04-11T01:43:24.049349Z"
+     "end_time": "2019-04-11T01:43:40.117267Z",
+     "start_time": "2019-04-11T01:43:40.088992Z"
     },
     "code_folding": [
      15,
@@ -285,7 +285,7 @@
     "class PCA_layer():\n",
     "\n",
     "    def __init__(self,inc,outc,act=g,d_act=g_grad):\n",
-    "        self.w =self.sym_decorrelation(np.random.uniform(inc,outc))\n",
+    "        self.w =self.sym_decorrelation(np.random.uniform(size=(inc,outc)))\n",
     "        self.a =np.ones(outc)\n",
     "        self.b =np.ones(outc)\n",
     "        self.c =np.zeros(outc)\n",
@@ -367,30 +367,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T01:43:24.339544Z",
-     "start_time": "2019-04-11T01:43:24.285446Z"
+     "start_time": "2019-04-11T01:44:03.672Z"
     }
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'float' object has no attribute 'T'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-282-f9203128a9e3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.00008\u001b[0m\u001b[1;33m;\u001b[0m \u001b[0mbeta1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.9\u001b[0m\u001b[1;33m;\u001b[0m \u001b[0mbeta2\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.999\u001b[0m\u001b[1;33m;\u001b[0m \u001b[0madam_e\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1e-8\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0ml1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPCA_layer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0ml2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPCA_layer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0ml3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPCA_layer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-281-11db5ae8dc8c>\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, inc, outc, act, d_act)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0minc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0moutc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mact\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mg\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0md_act\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mg_grad\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mw\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msym_decorrelation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muniform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0moutc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-281-11db5ae8dc8c>\u001b[0m in \u001b[0;36msym_decorrelation\u001b[1;34m(self, W)\u001b[0m\n\u001b[0;32m     76\u001b[0m         \u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m \u001b[0mW\u001b[0m \u001b[1;33m<\u001b[0m\u001b[1;33m-\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mW\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m^\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m}\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     77\u001b[0m         \"\"\"\n\u001b[1;32m---> 78\u001b[1;33m         \u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meigh\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     79\u001b[0m         \u001b[1;31m# u (resp. s) contains the eigenvectors (resp. square roots of\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m         \u001b[1;31m# the eigenvalues) of W * W.T\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'float' object has no attribute 'T'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.802230843489717\r",
+      "30.159196637501914\r",
+      "27.699293769563305\r",
+      "47.12052981646457\r",
+      "66.80358990212537\r",
+      "63.434120992248225\r",
+      "90.70350942172382\r",
+      "76.77508602720268\r",
+      "27.157011314466473\r",
+      "42.91967414506848\r",
+      "70.48999973016508\r",
+      "42.829624068983875\r",
+      "129.5640317933868\r",
+      "17.333567857881572\r",
+      "39.14748801075183\r",
+      "77.60438777232794\r",
+      "22.409902757231805\r",
+      "41.75625932851997\r",
+      "60.54596467952255\r",
+      "94.40518546123174\r",
+      "31.50452377149529\r",
+      "17.78622619046532\r",
+      "10.451178937840634\r",
+      "11.333841262644992\r",
+      "13.017439117186791\r",
+      "16.561049680013454\r",
+      "4.531733974955905\r",
+      "15.203560047433115\r",
+      "16.06885535942305\r",
+      "13.423382859639913\r",
+      "6.902652757847024\r",
+      "17.765226657334644\r",
+      "5.307235008518155\r",
+      "8.772443730687819\r",
+      "24.948524539557674\r",
+      "12.931673698512101\r",
+      "9.147065911730863\r",
+      "11.916517852274072\r",
+      "7.8557381774498225\r",
+      "15.983051450438664\r",
+      "9.545449993878893\r",
+      "9.731475892765165\r",
+      "9.308719147430908\r",
+      "9.534249769024122\r",
+      "7.203941282714922\r",
+      "6.870906450691168\r",
+      "5.844418170541011\r",
+      "4.31551281839991\r",
+      "9.723007671702778\r",
+      "5.352600731866081\r",
+      "8.635530686529153\r",
+      "6.166162521724331\r",
+      "6.741787124935671\r",
+      "4.568427300599281\r",
+      "6.53221099468338\r",
+      "10.1472939799653\r",
+      "9.567215413716827\r",
+      "8.35334238224245\r",
+      "7.938804886979286\r",
+      "10.117782361595701\r",
+      "13.492363571229573\r",
+      "6.224838653952203\r",
+      "4.130147930204128\r",
+      "4.87449863645066\r",
+      "7.374030942877091\r",
+      "10.760500941854424\r",
+      "8.738584104277002\r",
+      "8.779311855117129\r",
+      "9.1669517436376\r",
+      "7.177197412029169\r",
+      "11.97534214310296\r",
+      "4.467467647809941\r",
+      "4.572149847029871\r",
+      "3.482441195810084\r",
+      "6.276967615192216\r",
+      "6.84095843704354\r",
+      "6.663199768079985\r",
+      "3.3400679541669933\r",
+      "7.528492327870945\r",
+      "7.728815205532793\r",
+      "7.522756264123252\r",
+      "6.196962717291422\r",
+      "6.771501944306806\r",
+      "6.429693618118913\r",
+      "11.121099957833778\r",
+      "3.346477017342836\r",
+      "7.9509529639557295\r",
+      "7.327427115219444\r",
+      "6.505029278650956\r",
+      "5.955220681558227\r",
+      "8.825037145898083\r",
+      "10.71973290591092\r",
+      "11.766440155965778\r",
+      "8.875699010027578\r",
+      "8.214576631864494\r",
+      "4.894000029059568\r",
+      "6.235849583048369\r",
+      "4.236156336354277\r",
+      "6.615729684874783\r",
+      "4.621272455571111\r",
+      "7.823129906142793\r",
+      "5.063200727779105\r",
+      "7.965529559051522\r",
+      "9.517668560409355\r",
+      "5.334916361513097\r",
+      "5.806821532108699\r",
+      "5.833545165843088\r",
+      "4.8591163604105\r",
+      "5.700400877726438\r",
+      "3.5959032484351194\r",
+      "5.506011382816643\r",
+      "5.3075846164637\r",
+      "4.4680619948336\r",
+      "2.6870013054988973\r",
+      "5.116314358924997\r",
+      "4.712891808552798\r",
+      "5.972008093077419\r",
+      "3.9631071735320087\r",
+      "5.641231501562196\r",
+      "8.725631784031172\r",
+      "6.549473547780826\r",
+      "4.423763036987291\r",
+      "3.8355692931797414\r",
+      "5.0205570128230415\r",
+      "4.728140944983216\r",
+      "4.881114461553707\r",
+      "5.181110257728569\r",
+      "7.693478616761463\r",
+      "9.201458947650124\r",
+      "7.145584859160459\r",
+      "8.371761804678258\r",
+      "11.766545327529906\r",
+      "6.942183262329406\r",
+      "7.52298810580195\r",
+      "5.448571209639609\r",
+      "10.9087258310073\r",
+      "8.763899307739226\r",
+      "8.646259650468552\r",
+      "8.711643703249111\r",
+      "7.558989345976671\r",
+      "9.100054935028716\r",
+      "6.595808129995623\r",
+      "5.169091358687918\r",
+      "5.732670062211006\r",
+      "5.320882788744061\r",
+      "9.549562342036758\r",
+      "4.979835711011711\r",
+      "9.284720440737923\r",
+      "7.42786714825081\r",
+      "13.158324304011545\r",
+      "10.110876685744891\r",
+      "10.199434432604466\r",
+      "6.07553672291216\r",
+      "18.6722659281893\r",
+      "8.144818879933121\r",
+      "8.84167843056008\r",
+      "6.3108555343929655\r",
+      "9.327969565094394\r",
+      "9.521137773909185\r",
+      "5.864213929005242\r",
+      "5.5719083983716615\r",
+      "6.872334097600738\r",
+      "5.392183761080148\r",
+      "4.876508164326248\r",
+      "2.6153908205046434\r",
+      "4.772362625267553\r",
+      "2.669343251958358\r",
+      "6.402469677454704\r",
+      "6.674868825515251\r",
+      "3.7711245193937604\r",
+      "7.368150299349624\r",
+      "5.803475976411611\r",
+      "5.0139241937015075\r"
      ]
     }
    ],
    "source": [
-    "learning_rate = 0.00008; beta1=0.9; beta2=0.999; adam_e = 1e-8 \n",
+    "learning_rate = 0.0008; beta1=0.9; beta2=0.999; adam_e = 1e-8 \n",
     "\n",
     "l1 = PCA_layer(2,8)\n",
     "l2 = PCA_layer(8,8)\n",
