Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -269,11 +269,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 311,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T01:53:26.548426Z",
-     "start_time": "2019-04-11T01:53:26.523574Z"
+     "end_time": "2019-04-11T01:54:27.704500Z",
+     "start_time": "2019-04-11T01:54:27.682635Z"
     },
     "code_folding": [
      15,
@@ -325,8 +325,8 @@
     "        grada = (gradient * self.act(self.b * self.layer)).sum(0)\n",
     "        gradb = (gradient * self.a * self.d_act(self.b * self.layer) * self.layer).sum(0)\n",
     "        gradc = gradient.sum(0)\n",
-    "        gradw = self.input.T @(gradient * self.a * self.d_act(self.b * self.layer) * self.b) -  2 * self.input.T @ self.input @ self.w \n",
-    "        grad_pass = (gradient * self.a * self.d_act(self.b * self.layer) * self.b)  @ self.w.T -2 * self.input   @ self.w     @ self.w.T\n",
+    "        gradw = self.input.T @(gradient * self.a * self.d_act(self.b * self.layer) * self.b) \n",
+    "        grad_pass = (gradient * self.a * self.d_act(self.b * self.layer) * self.b)  @ self.w.T \n",
     "        \n",
     "        \n",
     "        self.ma   = beta1 * self.ma + (1-beta1) * grada\n",
@@ -371,7 +371,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-11T01:53:26.716Z"
+     "start_time": "2019-04-11T01:55:27.800Z"
     }
    },
    "outputs": [
@@ -379,19 +379,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "252.68502899593705\r"
+      "14.740144157763805\r"
      ]
     }
    ],
    "source": [
-    "learning_rate = 0.00008; beta1=0.9; beta2=0.999; adam_e = 1e-8 \n",
+    "learning_rate = 0.0008; beta1=0.9; beta2=0.999; adam_e = 1e-8 \n",
     "\n",
     "l1 = PCA_layer(2,8)\n",
     "l2 = PCA_layer(8,4)\n",
     "l3 = PCA_layer(4,2)\n",
     "\n",
-    "mini_batch_size    = 100\n",
-    "training_iteration = 5000\n",
+    "mini_batch_size    = 50\n",
+    "training_iteration = 1000\n",
     "\n",
     "copyX = np.copy(X)\n",
     "for iter in range(training_iteration):\n",
