--- a/sandbox full of trash/PCA via gradient 2/5.3 BN make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.3 BN make moon regression.ipynb
@@ -474,9 +474,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-11T14:37:12.426118Z",
+     "start_time": "2019-04-11T14:37:12.418183Z"
+    },
+    "code_folding": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.511 0.49 ] [0.294 0.283]\n",
+      "[-0. -0.] [1. 1.]\n"
+     ]
+    }
+   ],
    "source": [
     "def batchnorm_forward(x, eps=1e-8):\n",
     "\n",
@@ -503,7 +518,13 @@
     "    #step7: execute normalization\n",
     "    xhat = xmu * ivar\n",
     "\n",
-    "    return out, cache"
+    "    return xhat\n",
+    "\n",
+    "\n",
+    "tt = np.random.uniform(size=(100,2))\n",
+    "print(tt.mean(0),tt.std(0))\n",
+    "tt = batchnorm_forward(tt)\n",
+    "print(tt.mean(0),tt.std(0))"
    ]
   },
   {
