--- a/sandbox full of trash/PCA via gradient 2/5.3 BN make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.3 BN make moon regression.ipynb
@@ -520,6 +520,47 @@
     "\n",
     "    return xhat\n",
     "\n",
+    "def batchnorm_backward(dout, cache):\n",
+    "\n",
+    "    #unfold the variables stored in cache\n",
+    "    xhat,xmu,ivar,sqrtvar,var,eps = cache\n",
+    "\n",
+    "    #get the dimensions of the input/output\n",
+    "    N,D = dout.shape\n",
+    "\n",
+    "    #step9\n",
+    "    dgammax = dout #not necessary, but more understandable\n",
+    "\n",
+    "    #step8\n",
+    "    dxhat = dgammax \n",
+    "\n",
+    "    #step7\n",
+    "    divar = np.sum(dxhat*xmu, axis=0)\n",
+    "    dxmu1 = dxhat * ivar\n",
+    "\n",
+    "    #step6\n",
+    "    dsqrtvar = -1. /(sqrtvar**2) * divar\n",
+    "\n",
+    "    #step5\n",
+    "    dvar = 0.5 * 1. /np.sqrt(var+eps) * dsqrtvar\n",
+    "\n",
+    "    #step4\n",
+    "    dsq = 1. /N * np.ones((N,D)) * dvar\n",
+    "\n",
+    "    #step3\n",
+    "    dxmu2 = 2 * xmu * dsq\n",
+    "\n",
+    "    #step2\n",
+    "    dx1 = (dxmu1 + dxmu2)\n",
+    "    dmu = -1 * np.sum(dxmu1+dxmu2, axis=0)\n",
+    "\n",
+    "    #step1\n",
+    "    dx2 = 1. /N * np.ones((N,D)) * dmu\n",
+    "\n",
+    "    #step0\n",
+    "    dx = dx1 + dx2\n",
+    "\n",
+    "    return dx\n",
     "\n",
     "tt = np.random.uniform(size=(100,2))\n",
     "print(tt.mean(0),tt.std(0))\n",
