Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.3 BN make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.3 BN make moon regression.ipynb
@@ -520,10 +520,10 @@
     "\n",
     "    return xhat\n",
     "\n",
-    "def batchnorm_backward(dout, cache):\n",
+    "def batchnorm_backward(dout, cache,eps=1e-8):\n",
     "\n",
     "    #unfold the variables stored in cache\n",
-    "    xhat,xmu,ivar,sqrtvar,var,eps = cache\n",
+    "    xhat,xmu,ivar,sqrtvar,var = cache\n",
     "\n",
     "    #get the dimensions of the input/output\n",
     "    N,D = dout.shape\n",
