--- a/sandbox full of trash/PCA via gradient 2/5.3 BN make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.3 BN make moon regression.ipynb
@@ -474,11 +474,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T14:37:12.426118Z",
-     "start_time": "2019-04-11T14:37:12.418183Z"
+     "end_time": "2019-04-11T14:40:40.160009Z",
+     "start_time": "2019-04-11T14:40:40.147136Z"
     },
     "code_folding": []
    },
@@ -487,8 +487,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.511 0.49 ] [0.294 0.283]\n",
-      "[-0. -0.] [1. 1.]\n"
+      "[0.571 0.471] [0.272 0.276]\n",
+      "[-0. -0.] [1. 1.]\n",
+      "-4.3742787170231167e-16\n"
      ]
     }
    ],
@@ -517,8 +518,10 @@
     "\n",
     "    #step7: execute normalization\n",
     "    xhat = xmu * ivar\n",
+    "    \n",
+    "    cache = (xhat,xmu,ivar,sqrtvar,var)\n",
     "\n",
-    "    return xhat\n",
+    "    return xhat,cache\n",
     "\n",
     "def batchnorm_backward(dout, cache,eps=1e-8):\n",
     "\n",
@@ -564,8 +567,10 @@
     "\n",
     "tt = np.random.uniform(size=(100,2))\n",
     "print(tt.mean(0),tt.std(0))\n",
-    "tt = batchnorm_forward(tt)\n",
-    "print(tt.mean(0),tt.std(0))"
+    "tt,chca = batchnorm_forward(tt)\n",
+    "grad = batchnorm_backward(np.ones_like(tt),chca)\n",
+    "print(tt.mean(0),tt.std(0))\n",
+    "print(grad.mean())"
    ]
   },
   {
