Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.3 BN make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.3 BN make moon regression.ipynb
@@ -480,7 +480,9 @@
      "end_time": "2019-04-11T14:40:40.160009Z",
      "start_time": "2019-04-11T14:40:40.147136Z"
     },
-    "code_folding": []
+    "code_folding": [
+     37
+    ]
    },
    "outputs": [
     {
@@ -494,48 +496,44 @@
     }
    ],
    "source": [
-    "class tf_batch_norm_layer():\n",
+    "class batch_norm():\n",
     "    \n",
-    "    def __init__(self,vector_shape,axis):\n",
-    "        self.moving_mean = np.zeros(vector_shape)\n",
-    "        self.moving_vari = np.zeros(vector_shape)\n",
-    "        self.axis        = axis\n",
-    "        \n",
-    "    def feedforward(self,input,training_phase=True,eps = 1e-8):\n",
-    "        self.input = input\n",
-    "        self.input_size          = self.input.shape\n",
-    "        self.batch,self.h,self.w,self.c = self.input_size[0].value,self.input_size[1].value,self.input_size[2].value,self.input_size[3].value\n",
-    "\n",
-    "        # Training Moving Average Mean         \n",
-    "        def training_fn():\n",
-    "            self.mean    = tf.reduce_mean(self.input,axis=self.axis ,keepdims=True)\n",
-    "            self.var     = tf.reduce_mean(tf.square(self.input-self.mean),axis=self.axis,keepdims=True)\n",
-    "            centered_data= (self.input - self.mean)/tf.sqrt(self.var + eps)\n",
-    "            \n",
-    "            update_variable = []\n",
-    "            update_variable.append(tf.assign(self.moving_mean,self.moving_mean*0.9 + 0.1 * self.mean ))\n",
-    "            update_variable.append(tf.assign(self.moving_vari,self.moving_vari*0.9 + 0.1 * self.var  ))\n",
-    "            return centered_data,update_variable\n",
-    "        \n",
-    "        # Testing Moving Average Mean        \n",
-    "        def  testing_fn():\n",
-    "            centered_data   = (self.input - self.moving_mean)/tf.sqrt(self.moving_vari + eps)\n",
-    "            update_variable = []\n",
-    "            update_variable.append(tf.assign(self.moving_mean,self.moving_mean))\n",
-    "            update_variable.append(tf.assign(self.moving_vari,self.moving_vari))\n",
-    "            return centered_data,update_variable\n",
-    "        \n",
-    "        self.output,update_variable = tf.cond(training_phase,true_fn=training_fn,false_fn=testing_fn)\n",
-    "        return self.output,update_variable\n",
+    "    def __init__(self,outc):\n",
+    "        pass\n",
     "    \n",
-    "    def backprop(self,grad,eps = 1e-8):\n",
-    "        change_parts = 1.0 /(self.batch * self.h * self.w)\n",
-    "        grad_sigma   = tf.reduce_sum( grad *  (self.input-self.mean)     ,axis=self.axis,keepdims=True) * -0.5 * (self.var+eps) ** -1.5\n",
-    "        grad_mean    = tf.reduce_sum( grad *  (-1./tf.sqrt(self.var+eps)),axis=self.axis,keepdims=True) + grad_sigma * change_parts * 2.0 * tf.reduce_sum((self.input-self.mean),axis=self.axis,keepdims=True) * -1\n",
-    "        grad_x       = grad * 1/(tf.sqrt(self.var+eps)) + grad_sigma * change_parts * 2.0 * (self.input-self.mean) + grad_mean * change_parts\n",
-    "        return grad_x\n",
+    "    def feed(self,x,eps=1e-8):\n",
+    "        \n",
+    "        N, D = x.shape\n",
     "\n",
+    "        #step1: calculate mean\n",
+    "        mu = 1./N * np.sum(x, axis = 0)\n",
     "\n",
+    "        #step2: subtract mean vector of every trainings example\n",
+    "        xmu = x - mu\n",
+    "\n",
+    "        #step3: following the lower branch - calculation denominator\n",
+    "        sq = xmu ** 2\n",
+    "\n",
+    "        #step4: calculate variance\n",
+    "        var = 1./N * np.sum(sq, axis = 0)\n",
+    "\n",
+    "        #step5: add eps for numerical stability, then sqrt\n",
+    "        sqrtvar = np.sqrt(var + eps)\n",
+    "\n",
+    "        #step6: invert sqrtwar\n",
+    "        ivar = 1./sqrtvar\n",
+    "\n",
+    "        #step7: execute normalization\n",
+    "        xhat = xmu * ivar\n",
+    "\n",
+    "        self.cache = (xhat,xmu,ivar,sqrtvar,var)\n",
+    "\n",
+    "        return xhat\n",
+    "    \n",
+    "    def back(self,gradient,eps=1e-8):\n",
+    "        xhat,xmu,ivar,sqrtvar,var = self.cache\n",
+    "        \n",
+    "    \n",
     "def batchnorm_forward(x, eps=1e-8):\n",
     "\n",
     "    N, D = x.shape\n",
