Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.3 BN make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.3 BN make moon regression.ipynb
@@ -285,11 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 153,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T15:20:04.493796Z",
-     "start_time": "2019-04-11T15:20:04.350438Z"
+     "end_time": "2019-04-11T15:21:50.854133Z",
+     "start_time": "2019-04-11T15:21:50.821856Z"
     },
     "code_folding": [
      20,
@@ -367,7 +367,7 @@
     "        self.mc   = beta1 * self.mc + (1-beta1) * gradc\n",
     "        self.vc   = beta2 * self.vc + (1-beta2) * gradc ** 2\n",
     "        adam_midc = (self.mc / (1-beta1)) * learning_rate/(np.sqrt(self.vc/(1-beta2)) + adam_e)\n",
-    "        self.c    = self.c - adam_midc \n",
+    "        self.c    = self.stand(self.c - adam_midc)\n",
     "        \n",
     "        self.mw   = beta1 * self.mw + (1-beta1) * gradw\n",
     "        self.vw   = beta2 * self.vw + (1-beta2) * gradw ** 2\n",
