Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.3 BN make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.3 BN make moon regression.ipynb
@@ -285,11 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 170,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T15:23:44.937788Z",
-     "start_time": "2019-04-11T15:23:44.906045Z"
+     "end_time": "2019-04-11T15:25:22.216663Z",
+     "start_time": "2019-04-11T15:25:22.177492Z"
     },
     "code_folding": [
      20,
@@ -304,15 +304,16 @@
     "class PCA_layer():\n",
     "\n",
     "    def __init__(self,inc,outc,act=g,d_act=g_grad):\n",
-    "        self.w =self.sym_decorrelation(np.random.normal(size=(inc,outc)))\n",
+    "        #self.w =self.sym_decorrelation(np.random.normal(size=(inc,outc)))\n",
+    "        self.w =self.sym_decorrelation(np.random.uniform(size=(inc,outc)))\n",
+    "\n",
+    "        self.a =self.stand(np.random.normal(size=(outc)))\n",
+    "        self.b =self.stand(np.random.normal(size=(outc)))\n",
+    "        self.c =self.stand(np.random.normal(size=(outc)))\n",
     "        \n",
-    "#         self.a =self.stand(np.random.normal(size=(outc)))\n",
-    "#         self.b =self.stand(np.random.normal(size=(outc)))\n",
-    "#         self.c =self.stand(np.random.normal(size=(outc)))\n",
-    "        \n",
-    "        self.a =np.ones(outc)\n",
-    "        self.b =np.ones(outc)\n",
-    "        self.c =np.zeros(outc)\n",
+    "#         self.a =np.ones(outc)\n",
+    "#         self.b =np.ones(outc)\n",
+    "#         self.c =np.zeros(outc)\n",
     "\n",
     "        self.act = act; self.d_act = d_act\n",
     "        \n",
@@ -469,7 +470,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-11T15:24:03.230Z"
+     "start_time": "2019-04-11T15:25:22.774Z"
     }
    },
    "outputs": [
@@ -477,7 +478,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter: 321 33.842287057993465\r"
+      "Iter: 497 77.011810111513375\r"
      ]
     }
    ],
@@ -521,7 +522,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-11T15:24:03.819Z"
+     "start_time": "2019-04-11T15:25:25.074Z"
     }
    },
    "outputs": [],
