Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -544,24 +544,23 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T15:27:28.763796Z",
-     "start_time": "2019-04-11T15:27:28.629876Z"
+     "start_time": "2019-04-11T17:34:37.136Z"
     }
    },
    "outputs": [],
    "source": [
     "trace1 = go.Scatter3d(\n",
-    "    x=one_layer_project[y==0,0],\n",
-    "    y=one_layer_project[y==0,1],\n",
-    "    z=one_layer_project[y==0,2],\n",
+    "    x=layer2[y==0,0],\n",
+    "    y=layer2[y==0,1],\n",
+    "    z=layer2[y==0,2],\n",
     "    mode='markers',\n",
     "    line=dict(color='red',width=0.5),\n",
     "    marker=dict(size=3,opacity=0.3)\n",
     ")\n",
     "trace2 = go.Scatter3d(\n",
-    "    x=one_layer_project[y==1,0],\n",
-    "    y=one_layer_project[y==1,1],\n",
-    "    z=one_layer_project[y==1,2],\n",
+    "    x=layer2[y==1,0],\n",
+    "    y=layer2[y==1,1],\n",
+    "    z=layer2[y==1,2],\n",
     "    mode='markers',\n",
     "    line=dict(color='blue',width=0.5),\n",
     "    marker=dict(size=3,opacity=0.3)\n",
