Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -295,7 +295,6 @@
      2,
      19,
      34,
-     40,
      77,
      87,
      91
@@ -349,9 +348,9 @@
     "        gradb = (gradient * self.a * self.d_act(self.b * self.layer) * self.layer).mean(0)\n",
     "        gradc = gradient.mean(0)\n",
     "        \n",
-    "        gradw = self.input.T @(gradient * self.a * self.d_act(self.b * self.layer) * self.b) -2*self.input.T @ self.input @ self.w \n",
-    "        grad_pass = (gradient * self.a * self.d_act(self.b * self.layer) * self.b)  @ self.w.T -2*self.input   @ self.w     @ self.w.T\n",
-    "        \n",
+    "#         gradw = self.input.T @(gradient * self.a * self.d_act(self.b * self.layer) * self.b) -2*self.input.T @ self.input @ self.w \n",
+    "#         grad_pass = (gradient * self.a * self.d_act(self.b * self.layer) * self.b)  @ self.w.T -2*self.input   @ self.w     @ self.w.T\n",
+    "#         \n",
     "#         gradw = self.input.T @(gradient * self.a * self.d_act(self.b * self.layer) * self.b) \n",
     "#         grad_pass = (gradient * self.a * self.d_act(self.b * self.layer) * self.b)  @ self.w.T \n",
     "        \n",
