--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -337,7 +337,8 @@
     "        \n",
     "    def feed_non(self,input_value):\n",
     "        self.input = input_value\n",
-    "        self.layer = self.input @ self.w + np.random.ra\n",
+    "        self.layer = self.input @ self.w\n",
+    "        self.layer =  self.layer  + np.random.normal(0,0.05)\n",
     "        self.layerA= self.a * self.act(self.b * self.layer) + self.c\n",
     "        var = self.w.T @ self.input.T @ self.input @ self.w\n",
     "        return self.layerA,var\n",
