--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -334,10 +334,10 @@
     "        self.w    = self.sym_decorrelation(self.w - adam_midw) \n",
     "        return grad_pass\n",
     "        \n",
-    "    def feed_non(self,input_value):\n",
+    "    def feed_non(self,input_value,iter):\n",
     "        self.input = input_value\n",
     "        self.layer = self.input @ self.w\n",
-    "        self.layer =  self.layer  + np.random.normal(0,0.05,size=self.layer.shape)\n",
+    "        self.layer =  self.layer  + np.random.normal(0,0.05,size=self.layer.shape)*\n",
     "        self.layerA= self.a * self.act(self.b * self.layer) + self.c\n",
     "        var = self.w.T @ self.input.T @ self.input @ self.w\n",
     "        return self.layerA,var\n",
