--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -285,11 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T17:42:07.214087Z",
-     "start_time": "2019-04-11T17:42:07.177880Z"
+     "end_time": "2019-04-11T17:43:11.847977Z",
+     "start_time": "2019-04-11T17:43:11.809247Z"
     },
     "code_folding": [
      2,
@@ -334,10 +334,10 @@
     "        self.w    = self.sym_decorrelation(self.w - adam_midw) \n",
     "        return grad_pass\n",
     "        \n",
-    "    def feed_non(self,input_value,iter):\n",
+    "    def feed_non(self,input_value,cancel=0):\n",
     "        self.input = input_value\n",
     "        self.layer = self.input @ self.w\n",
-    "        self.layer =  self.layer  + np.random.normal(0,0.05,size=self.layer.shape)*\n",
+    "        self.layer =  self.layer  + np.random.normal(0,0.05,size=self.layer.shape)*cancel\n",
     "        self.layerA= self.a * self.act(self.b * self.layer) + self.c\n",
     "        var = self.w.T @ self.input.T @ self.input @ self.w\n",
     "        return self.layerA,var\n",
@@ -869,9 +869,9 @@
     "    copyX = shuffle(copyX)\n",
     "    for current_batch_index in range(0,len(X),mini_batch_size):\n",
     "        current_batch = copyX[current_batch_index:current_batch_index+mini_batch_size]\n",
-    "        layer1,layer1_var = l1.feed_non(current_batch)\n",
+    "        layer1,layer1_var = l1.feed_non(current_batch,1)\n",
     "        layer1bn = l1b.feed(layer1)\n",
-    "        layer2,layer2_var = l2.feed_non(layer1bn)\n",
+    "        layer2,layer2_var = l2.feed_non(layer1bn,1)\n",
     "        layer2bn = l2b.feed(layer2)\n",
     "        layer3,layer3_var = l3.feed_linear(layer2bn)\n",
     "\n",
