Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -334,6 +334,16 @@
     "        adam_midw = (self.mw / (1-beta1)) * learning_rate/(np.sqrt(self.vw/(1-beta2)) + adam_e)\n",
     "        self.w    = self.sym_decorrelation(self.w - adam_midw) \n",
     "        return grad_pass\n",
+    "    \n",
+    "    def back_linear_grad(self):\n",
+    "        gradw     = 2*self.input.T @ self.input @ self.w \n",
+    "        grad_pass = 2*self.input   @ self.w     @ self.w.T\n",
+    "        \n",
+    "        self.mw   = beta1 * self.mw + (1-beta1) * gradw\n",
+    "        self.vw   = beta2 * self.vw + (1-beta2) * gradw ** 2\n",
+    "        adam_midw = (self.mw / (1-beta1)) * learning_rate/(np.sqrt(self.vw/(1-beta2)) + adam_e)\n",
+    "        self.w    = self.sym_decorrelation(self.w - adam_midw) \n",
+    "        return grad_pass\n",
     "        \n",
     "    def feed_non(self,input_value,cancel=0):\n",
     "        self.input = input_value\n",
