Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -335,7 +335,7 @@
     "        self.w    = self.sym_decorrelation(self.w - adam_midw) \n",
     "        return grad_pass\n",
     "    \n",
-    "    def back_linear_grad(self):\n",
+    "    def back_linear_grad(self,gradient):\n",
     "        gradw     = 2*self.input.T @ self.input @ self.w \n",
     "        grad_pass = 2*self.input   @ self.w     @ self.w.T\n",
     "        \n",
