Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -336,7 +336,7 @@
     "        return grad_pass\n",
     "    \n",
     "    def back_linear_grad(self,gradient):\n",
-    "        gradw     = 2*self.input.T @ self.input @ self.w \n",
+    "        gradw     = self.input.T @ gradient 2*self.input.T @ self.input @ self.w \n",
     "        grad_pass = 2*self.input   @ self.w     @ self.w.T\n",
     "        \n",
     "        self.mw   = beta1 * self.mw + (1-beta1) * gradw\n",
