--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -294,9 +294,10 @@
     "code_folding": [
      2,
      19,
-     78,
-     92,
-     120
+     24,
+     87,
+     101,
+     129
     ]
    },
    "outputs": [],
@@ -336,7 +337,7 @@
     "        return grad_pass\n",
     "    \n",
     "    def back_linear_grad(self,gradient):\n",
-    "        gradw     = self.input.T @ gradient 2*self.input.T @ self.input @ self.w \n",
+    "        gradw     = self.input.T @ gradient - 2*self.input.T @ self.input @ self.w \n",
     "        grad_pass = 2*self.input   @ self.w     @ self.w.T\n",
     "        \n",
     "        self.mw   = beta1 * self.mw + (1-beta1) * gradw\n",
@@ -348,7 +349,7 @@
     "    def feed_non(self,input_value,cancel=0):\n",
     "        self.input = input_value\n",
     "        self.layer = self.input @ self.w\n",
-    "        self.layer =  self.layer  + np.random.normal(0,1,size=self.layer.shape)*cancel\n",
+    "        self.layer = self.layer  + np.random.normal(0,1,size=self.layer.shape)*cancel\n",
     "        self.layerA= self.a * self.act(self.b * self.layer) + self.c\n",
     "        var = self.w.T @ self.input.T @ self.input @ self.w\n",
     "        return self.layerA,var\n",
