Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -338,7 +338,7 @@
     "    \n",
     "    def back_linear_grad(self,gradient):\n",
     "        gradw     = self.input.T @ gradient - 2*self.input.T @ self.input @ self.w \n",
-    "        grad_pass = 2*self.input   @ self.w     @ self.w.T\n",
+    "        grad_pass = self.w.T @ gradient2*self.input   @ self.w     @ self.w.T\n",
     "        \n",
     "        self.mw   = beta1 * self.mw + (1-beta1) * gradw\n",
     "        self.vw   = beta2 * self.vw + (1-beta2) * gradw ** 2\n",
