Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -285,11 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T17:45:05.784675Z",
-     "start_time": "2019-04-11T17:45:05.753427Z"
+     "end_time": "2019-04-11T17:49:10.659032Z",
+     "start_time": "2019-04-11T17:49:10.622322Z"
     },
     "code_folding": [
      2,
@@ -338,7 +338,7 @@
     "    \n",
     "    def back_linear_grad(self,gradient):\n",
     "        gradw     = self.input.T @ gradient - 2*self.input.T @ self.input @ self.w \n",
-    "        grad_pass = self.w.T @ gradient2*self.input   @ self.w     @ self.w.T\n",
+    "        grad_pass = gradient@self.w.T - 2*self.input   @ self.w     @ self.w.T\n",
     "        \n",
     "        self.mw   = beta1 * self.mw + (1-beta1) * gradw\n",
     "        self.vw   = beta2 * self.vw + (1-beta2) * gradw ** 2\n",
