--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -293,11 +293,14 @@
     },
     "code_folding": [
      2,
+     19,
      24,
      33,
      43,
      50,
      86,
+     96,
+     98,
      100,
      128
     ]
@@ -883,7 +886,7 @@
     "        current_batch = copyX[current_batch_index:current_batch_index+mini_batch_size]\n",
     "        layer1,layer1_var = l1.feed_non(current_batch,2)\n",
     "        layer1bn = l1b.feed(layer1)\n",
-    "        layer2,layer2_var = l2.feed_linear(layer1bn)\n",
+    "        layer2,layer2_var = l2.feed_non(layer1bn)\n",
     "        layer2bn = l2b.feed(layer2)\n",
     "        layer3,layer3_var = l3.feed_linear(layer2bn)\n",
     "\n",
@@ -892,7 +895,7 @@
     "        \n",
     "        grad3 = l3.back_linear()\n",
     "        grad2bn = l2b.back(grad3)\n",
-    "        grad2 = l2.back_linear_grad(grad2bn)\n",
+    "        grad2 = l2.back_non(grad2bn)\n",
     "        grad1bn = l1b.back(grad2)\n",
     "        grad1 = l1.back_non(grad1bn)\n",
     "   \n",
