Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.4 small BN.ipynb
@@ -294,13 +294,12 @@
     "code_folding": [
      2,
      19,
-     43,
-     50,
-     86,
-     96,
-     98,
-     100,
-     128
+     34,
+     77,
+     87,
+     89,
+     91,
+     119
     ]
    },
    "outputs": [],
@@ -352,7 +351,7 @@
     "        gradb = (gradient * self.a * self.d_act(self.b * self.layer) * self.layer).mean(0)\n",
     "        gradc = gradient.mean(0)\n",
     "        \n",
-    "        gradw = self.input.T @(gradient * self.a * self.d_act(self.b * self.layer) * self.b) -2*self.input.T @ self.input @ self.w \n",
+    "        gradw = self.input.T @(gradient * self.a * self.d_act(self.b * self.layer) * self.b) +2*self.input.T @ self.input @ self.w \n",
     "        grad_pass = (gradient * self.a * self.d_act(self.b * self.layer) * self.b)  @ self.w.T -2*self.input   @ self.w     @ self.w.T\n",
     "        \n",
     "#         gradw = self.input.T @(gradient * self.a * self.d_act(self.b * self.layer) * self.b) \n",
